<resources>
    <string name="app_name">Wan</string>

    <string name="app_tab_home">首页</string>
    <string name="app_tab_project">项目</string>
    <string name="app_tab_square">广场</string>
    <string name="app_tab_public">公众号</string>
    <string name="app_tab_mine">我的</string>

    <string name="app_confirm">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_tip">温馨提示</string>

    <string name="app_choose_theme_color">主题颜色</string>

    <string name="app_transition_logo_splash" translatable="false">transition_logo_splash</string>

    <string name="app_todo_title">待办事项</string>
    <string name="app_todo_tip1">标题</string>
    <string name="app_todo_placeholder1">请输入标题</string>
    <string name="app_todo_tip2">内容</string>
    <string name="app_todo_placeholder2">请输入内容</string>
    <string name="app_todo_tip3">预定完成时间</string>
    <string name="app_todo_finish_time">请选择预定完成时间</string>
    <string name="app_todo_tip4">优先级</string>
    <string name="app_todo_submit">提交</string>
    <string name="app_todo_list_title">待办清单</string>

    <string name="app_collect_title">我的收藏</string>
    <string name="app_collect_tip">这些都是你喜欢的,快来看看吧</string>

    <string name="app_integral_history_title">积分记录</string>
    <string name="app_integral_rank_title">积分排行</string>

    <string name="app_login_username_tip">请输入账号</string>
    <string name="app_login_password_tip">请输入密码</string>
    <string name="app_login">登录</string>
    <string name="app_login_register_tip">还没有账号，去注册账号?</string>

    <string name="app_register_title">账号注册</string>
    <string name="app_register_placeholder1">请输入用户名</string>
    <string name="app_register_placeholder2">请输入密码</string>
    <string name="app_register_placeholder3">请输入确认密码</string>
    <string name="app_register">注册</string>

    <string name="app_search_placeholder">请输入搜索内容</string>
    <string name="app_search">搜索</string>
    <string name="app_search_tip1">热门搜索</string>
    <string name="app_search_tip2">历史搜索</string>

    <string name="app_setting_title">设置</string>
    <string name="app_setting_tip1">清除缓存</string>
    <string name="app_setting_content1">0.0B</string>
    <string name="app_setting_tip2">列表动画</string>
    <string name="app_setting_content2">无</string>
    <string name="app_setting_tip3">主题颜色</string>
    <string name="app_setting_content3">设置app的主题颜色</string>
    <string name="app_setting_tip4">当前版本</string>
    <string name="app_setting_content4">1.0.0</string>
    <string name="app_setting_tip5">项目源码</string>
    <string name="app_setting_content5">https://github.com/hjcasd/Wan</string>
    <string name="app_setting_logout">退出登录</string>

    <string name="operate_delete">删除</string>
    <string name="operate_finish">完成</string>

    <string name="priority_choose">请选择优先级</string>

    <string name="app_mine_title">个人中心</string>
    <string name="app_mine_integral">我的积分</string>
    <string name="app_mine_integral_tip">当前积分：</string>
    <string name="app_mine_integral_value">0</string>
    <string name="app_mine_collect">我的收藏</string>
    <string name="app_mine_todo">待办事项</string>
    <string name="app_mine_open_website">开源网站</string>
    <string name="app_mine_join">加入我们</string>
    <string name="app_mine_setting">系统设置</string>

    <string name="app_menu_close">关闭</string>
    <string name="app_menu_refresh">刷新</string>
    <string name="app_menu_collect">收藏</string>
    <string name="app_menu_share">分享</string>
    <string name="app_menu_copy">复制链接</string>
    <string name="app_menu_open">浏览器打开</string>

</resources>
