<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/MenuTabStyle"
            android:checked="true"
            android:drawableTop="@drawable/selector_rb_tab1"
            android:text="@string/app_tab_home" />

        <RadioButton
            android:id="@+id/rb_project"
            style="@style/MenuTabStyle"
            android:drawableTop="@drawable/selector_rb_tab2"
            android:text="@string/app_tab_project" />


        <RadioButton
            android:id="@+id/rb_square"
            style="@style/MenuTabStyle"
            android:drawableTop="@drawable/selector_rb_tab3"
            android:text="@string/app_tab_square" />

        <RadioButton
            android:id="@+id/rb_public"
            style="@style/MenuTabStyle"
            android:drawableTop="@drawable/selector_rb_tab4"
            android:text="@string/app_tab_public" />


        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/MenuTabStyle"
            android:drawableTop="@drawable/selector_rb_tab5"
            android:text="@string/app_tab_mine" />

    </RadioGroup>

</LinearLayout>