<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_f4f5f6"
    android:orientation="vertical">

    <com.hjc.baselib.widget.bar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImage="@mipmap/icon_back"
        app:titleText="@string/app_todo_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_todo_tip1"
                android:textColor="@color/app_black_333"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/app_todo_placeholder1"
                android:padding="10dp"
                android:textColor="@color/app_black_666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_todo_tip2"
                android:textColor="@color/app_black_333"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_edit_text"
                android:gravity="start"
                android:hint="@string/app_todo_placeholder2"
                android:lines="3"
                android:padding="10dp"
                android:textColor="@color/app_black_666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_todo_tip3"
                android:textColor="@color/app_black_333"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/app_todo_finish_time"
                android:padding="10dp"
                android:textColor="@color/app_black_666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_todo_tip4"
                android:textColor="@color/app_black_333"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/ll_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_edit_text"
                android:gravity="center_vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_priority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/app_black_666"
                    android:textSize="14sp" />

                <com.hjc.wan.widget.CircleColorView
                    android:id="@+id/color_view"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_btn_logout"
                android:text="@string/app_todo_submit"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>

