<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjc.baselib.widget.bar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/app_mine_title" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.header.MaterialHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.scwang.smartrefresh.header.MaterialHeader>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_gray_f4f5f6"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/app_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginStart="10dp"
                        android:src="@mipmap/icon_avatar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toTopOf="@id/tv_info"
                        app:layout_constraintLeft_toRightOf="@id/iv_avatar"
                        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

                    <TextView
                        android:id="@+id/tv_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                        app:layout_constraintLeft_toLeftOf="@id/tv_name"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/ll_integral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/icon_my_integral" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/app_mine_integral"
                            android:textColor="@color/app_black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_mine_integral_tip"
                            android:textColor="@color/app_black_666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_integral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_mine_integral_value"
                            android:textColor="@color/app_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="10dp"
                            android:src="@mipmap/icon_arrow_right" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_collect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/icon_my_collect" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/app_mine_collect"
                            android:textColor="@color/app_black"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="10dp"
                            android:src="@mipmap/icon_arrow_right" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_todo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/icon_my_todo" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/app_mine_todo"
                            android:textColor="@color/app_black"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="10dp"
                            android:src="@mipmap/icon_arrow_right" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/ll_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/icon_my_open" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/app_mine_open_website"
                            android:textColor="@color/app_black"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="10dp"
                            android:src="@mipmap/icon_arrow_right" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_join"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/icon_my_join" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/app_mine_join"
                            android:textColor="@color/app_black"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="10dp"
                            android:src="@mipmap/icon_arrow_right" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/icon_my_setting" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/app_mine_setting"
                            android:textColor="@color/app_black"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="10dp"
                            android:src="@mipmap/icon_arrow_right" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>
